--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
 			<version>3.1</version>
 		</dependency>
 		<!-- JSON -->
+		<!-- TODO can be deleted when spotter moved to qa.nerd -->
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
