introduced qa.nerd

--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,17 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.aksw.qa</groupId>
+			<artifactId>nerd</artifactId>
+			<version>${qa-nerd.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
 			<groupId>edu.stanford.nlp</groupId>
 			<artifactId>stanford-corenlp</artifactId>
 			<version>3.6.0</version>
