--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<!-- Lucene -->
 		<dependency>
@@ -60,24 +66,17 @@
 		</dependency>
 		<!-- NIF document creator for testing spotter -->
 		<dependency>
-			<groupId>org.aksw</groupId>
-			<artifactId>gerbil.nif.transfer</artifactId>
-			<version>1.2.0</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>jena-core</artifactId>
-					<groupId>org.apache.jena</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jena-arq</artifactId>
-					<groupId>org.apache.jena</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>slf4j-log4j12</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-			</exclusions>
+			<groupId>com.github.AKSW</groupId>
+			<artifactId>gerbil</artifactId>
+			<version>gerbil.nif.transfer-jena3.1-SNAPSHOT</version>
 		</dependency>
+
+		<!-- <dependency> <groupId>org.aksw</groupId> <artifactId>gerbil.nif.transfer</artifactId> 
+			<version>1.2.0</version> <exclusions> <exclusion> <artifactId>jena-core</artifactId> 
+			<groupId>org.apache.jena</groupId> </exclusion> <exclusion> <artifactId>jena-arq</artifactId> 
+			<groupId>org.apache.jena</groupId> </exclusion> <exclusion> <artifactId>slf4j-log4j12</artifactId> 
+			<groupId>org.slf4j</groupId> </exclusion> </exclusions> </dependency> -->
+
 		<!-- Predicate-Argument Trees -->
 		<dependency>
 			<groupId>com.clearnlp</groupId>
@@ -156,6 +155,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -184,8 +189,13 @@
 			<version>${qa-commons.version}</version>
 			<exclusions>
 				<exclusion>
-					<artifactId>slf4j-log4j12</artifactId>
-					<groupId>org.slf4j</groupId>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-core</artifactId>
+
 				</exclusion>
 			</exclusions>
 		</dependency>
