--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 	<artifactId>hawk</artifactId>
 	<version>${qa-hawk.version}</version>
 	<name>HAWK - Hybrid Question Answering using Linked Data</name>
-	<packaging>jar</packaging>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>spring-releases</id>
@@ -31,18 +30,27 @@
 					<systemProperties>
 						<JAVA_OPTS>-Xms415m -Xmx16G -XX:MaxPermSize=1G</JAVA_OPTS>
 					</systemProperties>
-					<mainClass>org.aksw.hawk.webservice.WebApplication</mainClass>
+					<mainClass>org.aksw.hawk.webservice.WebController</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 	<repositories>
 		<repository>
+			<id>spring-releases</id>
+			<url>https://repo.spring.io/libs-release</url>
+		</repository>
+		<repository>
 			<id>jitpack.io</id>
 			<url>https://jitpack.io</url>
 		</repository>
 	</repositories>
 	<dependencies>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
 		<!-- Lucene -->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
@@ -69,6 +77,12 @@
 			<groupId>com.github.AKSW</groupId>
 			<artifactId>gerbil</artifactId>
 			<version>gerbil.nif.transfer-jena3.1-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- <dependency> <groupId>org.aksw</groupId> <artifactId>gerbil.nif.transfer</artifactId> 
