--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
 		<dependency>
 			<groupId>org.aksw.qa</groupId>
 			<artifactId>annotation</artifactId>
-			<version>${qa-annotation.version}</version>
+			<version>0.3.1</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>slf4j-log4j12</artifactId>
