--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,20 @@
 			<groupId>org.aksw</groupId>
 			<artifactId>gerbil.nif.transfer</artifactId>
 			<version>1.2.2-jena3.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.jena</groupId>
+					<artifactId>jena-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.jena</groupId>
+					<artifactId>jena-arq</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.jena</groupId>
+					<artifactId>jena-iri</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- Mutable Pair -->
