Fixed ClassNotFoundException org.aksw.hawk.webservice.WebController on deployment

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 							<JAVA_OPTS>-Xms415m -Xmx16G -XX:MaxPermSize=1G</JAVA_OPTS>
 						</systemProperties>
 					</jvmArguments>
-					<mainClass>org.aksw.hawk.webservice.WebController</mainClass>
+					<mainClass>org.aksw.hawk.webservice.WebApplication</mainClass>
 					<layout>JAR</layout>
 				</configuration>
 				<executions>
