Fuseki SPARQL endpoint and Stanford CoreNLP Server parameters in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8181
+
+fuseki.sparql.endpoint.url=127.0.0.1
+fuseki.sparql.endpoint.port=3030
+
+stanford.server.ip=127.0.0.1
+stanford.server.port=9000
+stanford.server.cores=4
